--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <nav>
       <nav class="navbar navbar-expand-lg" style="background-color: #FFB319;">
         <div class="container-fluid">
-          <a class="navbar-brand" href="../index.html"><img data-aos="flip-right" data-aos-duration="800" src="../assets/img/logo lulipets 60x60.png" alt=""></a>
+          <a class="navbar-brand" href="../index.html"><img data-aos="flip-right" data-aos-duration="800" src="./assets/img/logo lulipets 60x60.png" alt=""></a>
           <button class="navbar-toggler collapsed d-flex d-lg-none flex-column justify-content-around " type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="toggler-icon top-bar"></span>
             <span class="toggler-icon middle-bar"></span>
@@ -131,15 +131,15 @@
     <footer>
       <div class="footer d-flex justify-content-between ">
         <div class="logoLulipets mx-3">
-            <img src="../assets/img/logo 75x75.png" alt="">
+            <img src="./assets/img/logo 75x75.png" alt="">
         </div>
         <div class="derechos d-flex align-items-end">
             <p>©2022 Gastón Sánchez ,todos los derechos reservados</p>
         </div>
         <div class="redes d-flex align-items-center">
-            <a class="mx-2" target="_blank" href="https://www.facebook.com/"><img src="../assets/img/facebook 20x20.png"></a>
-            <a class="mx-2" target="_blank" href="https://www.instagram.com/"><img src="../assets/img/instagram 20x20.png"></a>
-            <a class="mx-2" target="_blank" href="www.twitter.com/"><img src="../assets/img/twitter 20x20.png"></a> 
+            <a class="mx-2" target="_blank" href="https://www.facebook.com/"><img src="./assets/img/facebook 20x20.png"></a>
+            <a class="mx-2" target="_blank" href="https://www.instagram.com/"><img src="./assets/img/instagram 20x20.png"></a>
+            <a class="mx-2" target="_blank" href="www.twitter.com/"><img src="./assets/img/twitter 20x20.png"></a> 
         </div>
       </div>
     </footer>
