--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <nav>
       <nav class="navbar navbar-expand-lg" style="background-color: #FFB319;">
         <div class="container-fluid">
-          <a class="navbar-brand" href="../index.html"><img data-aos="flip-right" data-aos-duration="800" src="./assets/img/logo lulipets 60x60.png" alt=""></a>
+          <a class="navbar-brand" href="../index.html"><img data-aos="flip-right" data-aos-duration="800" src="./assets/img/logo lulipets 60x60.png" alt="logo lulipets"></a>
           <button class="navbar-toggler collapsed d-flex d-lg-none flex-column justify-content-around " type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="toggler-icon top-bar"></span>
             <span class="toggler-icon middle-bar"></span>
@@ -58,28 +58,28 @@
             </div>
             <div class="carousel-inner">
               <div class="carousel-item active" data-bs-interval="10000">
-                <img src="./assets/img/carrusel/foto 1.jpg" class="d-block w-100" alt="...">
+                <img src="./assets/img/carrusel/foto 1.jpg" class="d-block w-100" alt="img 1">
                 <div class="carousel-caption ">
                   <h1>¡Somos Lulipets!</h1>
                   <p>Una aplicación fácil, dinámica e intuitiva en la que podamos controlar vacunaciones, desparasitaciones, alergias y turnos veterinarios de nuestras mascotas. Como así localizar las clínicas veterinarias más cercanas y mejor valoradas.</p>
                 </div>
               </div>
               <div class="carousel-item" data-bs-interval="2000">
-                <img src="./assets/img/carrusel/foto 2.jpg" class="d-block w-100" alt="...">
+                <img src="./assets/img/carrusel/foto 2.jpg" class="d-block w-100" alt="img2">
                 <div class="carousel-caption">
                   <h1>¡Somos Lulipets!</h1>
                   <p>Una aplicación fácil, dinámica e intuitiva en la que podamos controlar vacunaciones, desparasitaciones, alergias y turnos veterinarios de nuestras mascotas. Como así localizar las clínicas veterinarias más cercanas y mejor valoradas.</p>
                 </div>
               </div>
               <div class="carousel-item">
-                <img src="./assets/img/carrusel/foto 3.jpg" class="d-block w-100" alt="...">
+                <img src="./assets/img/carrusel/foto 3.jpg" class="d-block w-100" alt="img3">
                 <div class="carousel-caption">
                   <h1>¡Somos Lulipets!</h1>
                   <p>Una aplicación fácil, dinámica e intuitiva en la que podamos controlar vacunaciones, desparasitaciones, alergias y turnos veterinarios de nuestras mascotas. Como así localizar las clínicas veterinarias más cercanas y mejor valoradas.</p>
                 </div>
               </div>
               <div class="carousel-item">
-                <img src="./assets/img/carrusel/Foto 4.jpg" class="d-block w-100" alt="...">
+                <img src="./assets/img/carrusel/Foto 4.jpg" class="d-block w-100" alt="img4">
                 <div class="carousel-caption">
                   <h1>¡Somos Lulipets!</h1>
                   <p>Una aplicación fácil, dinámica e intuitiva en la que podamos controlar vacunaciones, desparasitaciones, alergias y turnos veterinarios de nuestras mascotas. Como así localizar las clínicas veterinarias más cercanas y mejor valoradas.</p>
@@ -99,27 +99,27 @@
     <main class="container-fluid">
       <div class="tarjetas row d-flex flex-wrap justify-content-between align-items-center m-4">
         <div data-aos="zoom-in-up" class="tarjeta col-5 col-lg-3  d-flex flex-column align-items-center justify-content-between m-3">
-           <img class="my-2" src="./assets/img/TarjetasInicio/perrro.png" alt="">
+           <img class="my-2" src="./assets/img/TarjetasInicio/perrro.png" alt="Perro">
            <p class="h4">Perros<p>
         </div>
         <div data-aos="zoom-in-up" class="tarjeta col-5 col-lg-3  d-flex flex-column align-items-center justify-content-around m-3">
-           <img  class="my-2" src="./assets/img/TarjetasInicio/peces.png" alt="">
+           <img  class="my-2" src="./assets/img/TarjetasInicio/peces.png" alt="Peces">
            <p class="h4">Peces<p>
         </div>
         <div data-aos="zoom-in-up" class="tarjeta col-5 col-lg-3 d-flex flex-column align-items-center justify-content-around m-3">
-           <img class="my-2" src="./assets/img/TarjetasInicio/gatos.png" alt="">
+           <img class="my-2" src="./assets/img/TarjetasInicio/gatos.png" alt="Gato">
            <p class="h4">Gatos<p>
         </div>
         <div data-aos="zoom-in-up"  class="tarjeta col-5 col-lg-3 d-flex flex-column align-items-center justify-content-around m-3">
-           <img class="my-3" src="./assets/img/TarjetasInicio/aves 2.png" alt="">
+           <img class="my-3" src="./assets/img/TarjetasInicio/aves 2.png" alt="Ave">
            <p class="h4">Aves<p>
         </div>
         <div data-aos="zoom-in-up" class="tarjeta col-5 col-lg-3 d-flex flex-column align-items-center justify-content-around m-3">
-           <img  class="my-4"src="./assets/img/TarjetasInicio/otros 2.png" alt="">
+           <img  class="my-4"src="./assets/img/TarjetasInicio/otros 2.png" alt="Otros">
            <p class="h4">Otros<p>
         </div>
         <div data-aos="zoom-in-up"  class="tarjeta col-5 col-lg-3 d-flex flex-column align-items-center justify-content-around m-3">
-           <img class="my-2"src="./assets/img/TarjetasInicio/hamsters.png" alt="">
+           <img class="my-2"src="./assets/img/TarjetasInicio/hamsters.png" alt="Hamster">
            <p class="h4">Hamsters<p>
         </div>
        </div>
@@ -137,9 +137,9 @@
             <p>©2022 Gastón Sánchez ,todos los derechos reservados</p>
         </div>
         <div class="redes d-flex align-items-center">
-            <a class="mx-2" target="_blank" href="https://www.facebook.com/"><img src="./assets/img/facebook 20x20.png"></a>
-            <a class="mx-2" target="_blank" href="https://www.instagram.com/"><img src="./assets/img/instagram 20x20.png"></a>
-            <a class="mx-2" target="_blank" href="www.twitter.com/"><img src="./assets/img/twitter 20x20.png"></a> 
+            <a class="mx-2" target="_blank" href="https://www.facebook.com/"><img src="./assets/img/facebook 20x20.png" alt="logo facebook"></a>
+            <a class="mx-2" target="_blank" href="https://www.instagram.com/"><img src="./assets/img/instagram 20x20.png" alt="logo instagram"></a>
+            <a class="mx-2" target="_blank" href="www.twitter.com/"><img src="./assets/img/twitter 20x20.png" alt="logo twitter"></a> 
         </div>
       </div>
     </footer>
