--- a/pages/Afiliados.html
+++ b/pages/Afiliados.html
@@ -17,7 +17,7 @@
   <nav>
     <nav class="navbar navbar-expand-lg" style="background-color: #FFB319;">
       <div class="container-fluid">
-        <a class="navbar-brand" href="../index.html"><img data-aos="flip-right" data-aos-duration="800" src="../assets/img/logo lulipets 60x60.png" alt=""></a>
+        <a class="navbar-brand" href="../index.html"><img data-aos="flip-right" data-aos-duration="800" src="../assets/img/logo lulipets 60x60.png" alt="logo Lulipets"></a>
         <button class="navbar-toggler collapsed d-flex d-lg-none flex-column justify-content-around " type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="toggler-icon top-bar"></span>
           <span class="toggler-icon middle-bar"></span>
@@ -56,7 +56,7 @@
       </div>
       <div class="buscador d-flex justify-content-between align-items-center my-5 col-8 col-lg-6 col-xl-5 ">
         <input type="text" class="buscarTexto" placeholder="Buscar...">
-        <img class="lupa"src="../assets/img/Blog/Buscar.png" alt="">
+        <img class="lupa"src="../assets/img/Blog/Buscar.png" alt="lupa">
       </div>
 
     </header>
@@ -73,7 +73,7 @@
       <div class="tarjetasAfiliado row d-flex flex-wrap justify-content-center align-items-center ">
           <div data-aos="zoom-in-up" class="tarjetaAfiliado d-flex  justify-content-center align-items-center m-4 col-10 col-md-9 col-lg-6 col-xl-5">
             <div class="imgA mx-3 my-5">
-                <img src="../assets/img/afiliados/glee pet market 1.jpg" alt="">
+                <img src="../assets/img/afiliados/glee pet market 1.jpg" alt="Glee pet market">
             </div>
             <div class="CardContent my-1">
               <h5>Glee Pet Market</h3>
@@ -82,7 +82,7 @@
           </div>  
           <div data-aos="zoom-in-up" class="tarjetaAfiliado d-flex  justify-content-center align-items-center m-4 col-10 col-md-9 col-lg-6 col-xl-5">
             <div class="imgA mx-3 my-5">
-                  <img class="imgA" src="../assets/img/afiliados/chocos.jpg" alt="">
+                  <img class="imgA" src="../assets/img/afiliados/chocos.jpg" alt="Chocos">
             </div>
             <div class="CardContent my-1">
                 <h5>Chocos</h3>
@@ -91,7 +91,7 @@
           </div>
           <div data-aos="zoom-in-up" class="tarjetaAfiliado d-flex  justify-content-center align-items-center m-4 col-10 col-md-9 col-lg-6 col-xl-5">
             <div class="imgA mx-3 my-4">
-                <img class="imgA" src="../assets/img/afiliados/veterinaria Alem 1.svg" alt="">
+                <img class="imgA" src="../assets/img/afiliados/veterinaria Alem 1.svg" alt="Alem">
             </div>
             <div class="CardContent my-3">
               <h5>Veterinaría Alem</h3>
@@ -100,7 +100,7 @@
           </div>  
           <div data-aos="zoom-in-up" class="tarjetaAfiliado d-flex  justify-content-center align-items-center m-4 col-10 col-md-9 col-lg-6 col-xl-5">
             <div class="imgA mx-3 my-4">
-              <img class="imgA" src="../assets/img/afiliados/veteri9naria kanus 1.svg" alt="">
+              <img class="imgA" src="../assets/img/afiliados/veteri9naria kanus 1.svg" alt="Kanus">
             </div>
             <div class="CardContent my-3">
               <h5>Kanus</h3>
@@ -109,7 +109,7 @@
           </div>        
           <div data-aos="zoom-in-up" class="tarjetaAfiliado d-flex  justify-content-center align-items-center m-4 col-10 col-md-9 col-lg-6 col-xl-5">
             <div class="imgA mx-3 my-5">
-              <img class="imgA" src="../assets/img/afiliados/mundo bicho 1.svg" alt="">
+              <img class="imgA" src="../assets/img/afiliados/mundo bicho 1.svg" alt="Mundo Bicho">
             </div>
             <div class="CardContent my-3">
               <h5>Mundo Bicho</h3>
@@ -118,7 +118,7 @@
           </div>      
           <div data-aos="zoom-in-up" class="tarjetaAfiliado d-flex  justify-content-center align-items-center m-4 col-10 col-md-9 col-lg-6 col-xl-5">
             <div class="imgA mx-3 my-5">
-              <img class="imgA" src="../assets/img/afiliados/pixis 1.svg" alt="">
+              <img class="imgA" src="../assets/img/afiliados/pixis 1.svg" alt="Pixis">
             </div>
             <div class="CardContent my-3">
               <h5>Veterinaria Pixies</h3>
@@ -143,15 +143,15 @@
     <footer class="foter row">
       <div class="footer d-flex justify-content-between ">
         <div class="logoLulipets mx-3">
-            <img src="../assets/img/logo 75x75.png" alt="">
+            <img src="../assets/img/logo 75x75.png" alt="logo Lulipets">
         </div>
         <div class="derechos d-flex align-items-end">
             <p>©2022 Gastón Sánchez ,todos los derechos reservados</p>
         </div>
         <div class="redes d-flex align-items-center">
-            <a class="mx-2" target="_blank" href="https://www.facebook.com/"><img src="../assets/img/facebook 20x20.png"></a>
-            <a class="mx-2" target="_blank" href="https://www.instagram.com/"><img src="../assets/img/instagram 20x20.png"></a>
-            <a class="mx-2" target="_blank" href="www.twitter.com/"><img src="../assets/img/twitter 20x20.png"></a> 
+            <a class="mx-2" target="_blank" href="https://www.facebook.com/"><img src="../assets/img/facebook 20x20.png" alt="Logo facebook"></a>
+            <a class="mx-2" target="_blank" href="https://www.instagram.com/"><img src="../assets/img/instagram 20x20.png" alt="Logo instagram"></a>
+            <a class="mx-2" target="_blank" href="www.twitter.com/"><img src="../assets/img/twitter 20x20.png" alt="Logo twitter"></a> 
         </div>
       </div>
     </footer>
