--- a/pages/Mi cuenta.html
+++ b/pages/Mi cuenta.html
@@ -17,7 +17,7 @@
     <nav>
       <nav class="navbar navbar-expand-lg" style="background-color: #FFB319;">
         <div class="container-fluid">
-          <a class="navbar-brand" href="../index.html"><img data-aos="flip-right" data-aos-duration="800" src="../assets/img/logo lulipets 60x60.png" alt=""></a>
+          <a class="navbar-brand" href="../index.html"><img data-aos="flip-right" data-aos-duration="800" src="../assets/img/logo lulipets 60x60.png" alt="logo Lulipets"></a>
           <button class="navbar-toggler collapsed d-flex d-lg-none flex-column justify-content-around " type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="toggler-icon top-bar"></span>
             <span class="toggler-icon middle-bar"></span>
@@ -76,8 +76,8 @@
       <div class="redes d-flex justify-content-center align-items-center mb-3">
         <p class="fs-5 m-3 me-5">O conéctate con</p>
         <div>
-          <img class="m-2 ms-5"src="../assets/img/MiCuenta/googlew.png" alt="">
-          <img class="m-1" src="../assets/img/MiCuenta/facebook.png" alt="">
+          <img class="m-2 ms-5"src="../assets/img/MiCuenta/googlew.png" alt="logo google">
+          <img class="m-1" src="../assets/img/MiCuenta/facebook.png" alt="logo facebook">
         </div>
       </div>
     </main>
@@ -93,9 +93,9 @@
             <p>©2022 Gastón Sánchez ,todos los derechos reservados</p>
         </div>
         <div class="redes d-flex align-items-center">
-            <a class="mx-2" target="_blank" href="https://www.facebook.com/"><img src="../assets/img/facebook 20x20.png"></a>
-            <a class="mx-2" target="_blank" href="https://www.instagram.com/"><img src="../assets/img/instagram 20x20.png"></a>
-            <a class="mx-2" target="_blank" href="www.twitter.com/"><img src="../assets/img/twitter 20x20.png"></a> 
+            <a class="mx-2" target="_blank" href="https://www.facebook.com/"><img src="../assets/img/facebook 20x20.png" alt="Logo facebook"></a>
+            <a class="mx-2" target="_blank" href="https://www.instagram.com/"><img src="../assets/img/instagram 20x20.png" alt="Logo instagram"></a>
+            <a class="mx-2" target="_blank" href="www.twitter.com/"><img src="../assets/img/twitter 20x20.png" alt="Logo twitter"></a> 
         </div>
       </div>
     </footer>
