--- a/pages/Nosotros.html
+++ b/pages/Nosotros.html
@@ -17,7 +17,7 @@
   <nav>
     <nav class="navbar navbar-expand-lg" style="background-color: #FFB319;">
       <div class="container-fluid">
-        <a class="navbar-brand" href="../index.html"><img data-aos="flip-right" data-aos-duration="800" src="../assets/img/logo lulipets 60x60.png" alt=""></a>
+        <a class="navbar-brand" href="../index.html"><img data-aos="flip-right" data-aos-duration="800" src="../assets/img/logo lulipets 60x60.png" alt="Logo Lulipets"></a>
         <button class="navbar-toggler collapsed d-flex d-lg-none flex-column justify-content-around " type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="toggler-icon top-bar"></span>
           <span class="toggler-icon middle-bar"></span>
@@ -51,7 +51,7 @@
   <div class="div Nosotros container-fluid">
     <header>
       <div class="d-flex flex-column align-items-center">
-        <img class="my-5" src="../assets/img/Nosotros/logo lulipets 2grande.png" alt="">
+        <img class="my-5" src="../assets/img/Nosotros/logo lulipets 2grande.png" alt="Logo Lulipets">
         <h1 class="tituloNosotros my-3">¿Cómo nacimos?</h1>
         <p class= "parrafoNosotros col-10 col-xl-9 mt-3">“Luli”, nuestra mascota, falleció de cáncer. Fueron meses de tratamientos, turnos con el veterinario, remedios y esperas para tratar una enfermedad que avanzaba implacablemente... En el proceso vimos como la energía de ella se apagaba poco a poco y como las tardanzas de un sistema que no funciona alargaban aun mas la agonía. Es por eso que creamos Lulipets, una aplicación fácil, dinámica e intuitiva en la que podamos controlar vacunaciones, desparasitaciones, alergias y turnos veterinarios de nuestras mascotas. Como así localizar las clínicas veterinarias más cercanas y mejor valoradas. Nuestro objetivo es que ninguna mascota pase por lo mismo que Luli, y ayudar a sus dueños a encontrar el lugar ideal para poder atenderlos. Con su ayuda podemos mejorar la infraestructura de nuestra aplicación, y lograr que muchas mascotas tengan la atención y el cuidado que se merecen.</p>
       </div>
@@ -75,8 +75,8 @@
                   Juntamos estos datos duros y obtenemos la solución a la problemática planteada. La creación de una app fácil, dinámica e intuitiva en la que los dueños puedan controlar vacunaciones, desparasitaciones, alergias y turnos veterinarios de sus mascotas. Como así localizar las clínicas veterinarias más cercanas y mejor valoradas.</p>
               </div>
               <div data-aos="zoom-in-up" class="d-flex flex-wrap justify-content-center my-3">
-                <img src="../assets/img/Nosotros/petting.svg" alt="">
-                <img src="../assets/img/Nosotros/Doggie.svg" alt="">
+                <img src="../assets/img/Nosotros/petting.svg" alt="dibujo 1">
+                <img src="../assets/img/Nosotros/Doggie.svg" alt="dibujo 2">
               </div>
     </main>
     <aside>
@@ -84,15 +84,15 @@
     <footer class="foter row">
       <div class="footer d-flex justify-content-between ">
         <div class="logoLulipets mx-3">
-            <img src="../assets/img/logo 75x75.png" alt="">
+            <img src="../assets/img/logo 75x75.png" alt="logo Lulipets">
         </div>
         <div class="derechos d-flex align-items-end">
             <p>©2022 Gastón Sánchez ,todos los derechos reservados</p>
         </div>
         <div class="redes d-flex align-items-center">
-            <a class="mx-2" target="_blank" href="https://www.facebook.com/"><img src="../assets/img/facebook 20x20.png"></a>
-            <a class="mx-2" target="_blank" href="https://www.instagram.com/"><img src="../assets/img/instagram 20x20.png"></a>
-            <a class="mx-2" target="_blank" href="www.twitter.com/"><img src="../assets/img/twitter 20x20.png"></a> 
+            <a class="mx-2" target="_blank" href="https://www.facebook.com/"><img src="../assets/img/facebook 20x20.png" alt="Logo facebook" ></a>
+            <a class="mx-2" target="_blank" href="https://www.instagram.com/"><img src="../assets/img/instagram 20x20.png" alt="Logo instagram"></a>
+            <a class="mx-2" target="_blank" href="www.twitter.com/"><img src="../assets/img/twitter 20x20.png" alt="Logo twitter"></a> 
         </div>
       </div>
     </footer>
