--- a/pages/Blog.html
+++ b/pages/Blog.html
@@ -17,7 +17,7 @@
   <nav>
     <nav class="navbar navbar-expand-lg" style="background-color: #FFB319;">
       <div class="container-fluid">
-        <a class="navbar-brand" href="../index.html"><img data-aos="flip-right" data-aos-duration="800" src="../assets/img/logo lulipets 60x60.png" alt=""></a>
+        <a class="navbar-brand" href="../index.html"><img data-aos="flip-right" data-aos-duration="800" src="../assets/img/logo lulipets 60x60.png" alt="logo Lulipets"></a>
         <button class="navbar-toggler collapsed d-flex d-lg-none flex-column justify-content-around " type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="toggler-icon top-bar"></span>
           <span class="toggler-icon middle-bar"></span>
@@ -55,18 +55,18 @@
         <p class="subtituloBlog text-center">Aqui podras ver todos la información sobre tu mascota. Desde nuestra aplicación podrás agregar información a nuestro blog</p>
       </div>
       <div class="circulo d-flex justify-content-center align-items-center col-12 col-lg-10">
-        <button class="Boton1"><img src="../assets/img/Blog/perroblog.png" alt=""></button>
-        <button class="Boton"><img src="../assets/img/Blog/pecesblog.png" alt=""></button>
-        <button class="Boton"><img src="../assets/img/Blog/gatoblog.png" alt=""></button>
-        <button class="Boton"><img src="../assets/img/Blog/pajarosblog.png" alt=""></button>
-        <button class="Boton"><img src="../assets/img/Blog/conejosblog.png" alt=""></button>
-        <button class="Boton"><img src="../assets/img/Blog/otrosblog.png" alt=""></button>
+        <button class="Boton1"><img src="../assets/img/Blog/perroblog.png" alt="Perro"></button>
+        <button class="Boton"><img src="../assets/img/Blog/pecesblog.png" alt="peces"></button>
+        <button class="Boton"><img src="../assets/img/Blog/gatoblog.png" alt="Gato"></button>
+        <button class="Boton"><img src="../assets/img/Blog/pajarosblog.png" alt="pajaros"></button>
+        <button class="Boton"><img src="../assets/img/Blog/conejosblog.png" alt="conejos"></button>
+        <button class="Boton"><img src="../assets/img/Blog/otrosblog.png" alt="Otros"></button>
       </div>
     </header>
     <main class="mainBlog row d-flex justify-content-center">
       <div class="buscador col-8 d-flex justify-content-between align-items-center my-3 col-lg-4 ">
         <input type="text" class="buscarTexto" placeholder="Buscar...">
-        <img class="lupa"src="../assets/img/Blog/Buscar.png" alt="">
+        <img class="lupa"src="../assets/img/Blog/Buscar.png" alt="lupa">
       </div>
     </main>
     <aside class="row d-flex flex-wrap justify-content-center align-items-center">
@@ -124,15 +124,15 @@
     <footer class="foter row">
       <div class="footer d-flex justify-content-between ">
         <div class="logoLulipets mx-3">
-            <img src="../assets/img/logo 75x75.png" alt="">
+            <img src="../assets/img/logo 75x75.png" alt="logo Lulipets">
         </div>
         <div class="derechos d-flex align-items-end">
             <p>©2022 Gastón Sánchez ,todos los derechos reservados</p>
         </div>
         <div class="redes d-flex align-items-center">
-            <a class="mx-2" target="_blank" href="https://www.facebook.com/"><img src="../assets/img/facebook 20x20.png"></a>
-            <a class="mx-2" target="_blank" href="https://www.instagram.com/"><img src="../assets/img/instagram 20x20.png"></a>
-            <a class="mx-2" target="_blank" href="www.twitter.com/"><img src="../assets/img/twitter 20x20.png"></a> 
+            <a class="mx-2" target="_blank" href="https://www.facebook.com/"><img src="../assets/img/facebook 20x20.png" alt="Logo facebook"></a>
+            <a class="mx-2" target="_blank" href="https://www.instagram.com/"><img src="../assets/img/instagram 20x20.png" alt="Logo instagram"></a>
+            <a class="mx-2" target="_blank" href="www.twitter.com/"><img src="../assets/img/twitter 20x20.png" alt="Logo twitter"></a> 
         </div>
       </div>
     </footer>
