error link/solucionado

--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
         <div class="redes d-flex align-items-center">
             <a class="mx-2" target="_blank" href="https://www.facebook.com/"><img src="./assets/img/facebook 20x20.png" alt="logo facebook"></a>
             <a class="mx-2" target="_blank" href="https://www.instagram.com/"><img src="./assets/img/instagram 20x20.png" alt="logo instagram"></a>
-            <a class="mx-2" target="_blank" href="www.twitter.com/"><img src="./assets/img/twitter 20x20.png" alt="logo twitter"></a> 
+            <a class="mx-2" target="_blank" href="https://www.twitter.com/"><img src="./assets/img/twitter 20x20.png" alt="logo twitter"></a> 
         </div>
       </div>
     </footer>
