--- a/pages/Afiliados.html
+++ b/pages/Afiliados.html
@@ -151,7 +151,7 @@
         <div class="redes d-flex align-items-center">
             <a class="mx-2" target="_blank" href="https://www.facebook.com/"><img src="../assets/img/facebook 20x20.png" alt="Logo facebook"></a>
             <a class="mx-2" target="_blank" href="https://www.instagram.com/"><img src="../assets/img/instagram 20x20.png" alt="Logo instagram"></a>
-            <a class="mx-2" target="_blank" href="www.twitter.com/"><img src="../assets/img/twitter 20x20.png" alt="Logo twitter"></a> 
+            <a class="mx-2" target="_blank" href="https://www.twitter.com/"><img src="../assets/img/twitter 20x20.png" alt="Logo twitter"></a> 
         </div>
       </div>
     </footer>
